<resources>
    <string name="app_name">DzBookStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_ip">192.168.1.2</string>
    <string name="enter_password">Enter Password:</string>
    <string name="enter_username">Enter Username:</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_mobile_number">Enter Mobile Number:</string>
    <string name="order_date">Order Date:</string>
    <string name="order_n">Order N°:</string>
    <string name="your_total">Your Total:</string>
    <string name="dzd">DZD</string>
    <string name="paymethodplaceholder">E-Card</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_address">Enter Address:</string>
    <string name="pick_a_category">Pick A Category:</string>
    <string name="enter_qty">Enter Quantity:</string>
    <string name="add">Add</string>
    <string name="here_are_the_books">Here are the books you\'ve ordered</string>
    <string name="this_is_the_amount_in_eur">this is the amount that will be subtracted from your account</string>
    <string name="your_total_in_eur">Your Total in EUR:</string>
    <string name="date_placeholder">YYYY-MM-DD HH:MM:SS</string>
    <string name="price_dzd_placeholder">00000</string>
    <string name="order_no_placeholder">000</string>
    <string name="total_eur_placeholder">0000.00</string>
    <string name="eur_currency_sign">EUR</string>
    <string name="contact_us">Contact Us</string>
    <string name="blurb_title">Book Details</string>
    <string name="blurb_book_title">Title:</string>
    <string name="author">Author:</string>
    <string name="summary">Summary:</string>
    <string name="ok">OK</string>
    <string name="im_not_a_robot">I am not a robot.</string>
    <string name="qr">GoodReads \n QR Code</string>
    <string name="enter_quantity">   Please enter the quantity to order:   </string>
    <string name="ticket_title"><u>Your Order Confirmation Ticket</u></string>
    <string name="total">Total:</string>
    <string name="total_in_eur">Total in EUR:</string>
    <string name="random_ny_addr">59 West 46th Street, New York City, NY 10036</string>
    <string name="delivery_addr">Delivery Address:</string>
    <string name="pay_method">Payment Method:</string>
    <string name="estimated_wait_period">Estimated Wait Period Until Delivery:</string>
    <string name="_1_2_weeks">1-2 Weeks</string>
    <string name="transaction_code">Transaction Code:</string>
    <string name="algerie_poste_ccp">Eddahabia Card\n(CCP)</string>
    <string name="paypal">Paypal</string>
    <string name="thanks_placeholder">Thank You, NAME,\n For Using Our Service!</string>
    <string name="one_two_weeks">Your order will be delivered within:  1-2 weeks</string>
    <string name="log_out">Log Out</string>
    <string name="close_app">Close App</string>
    <string name="submit">Submit</string>
    <string name="rate_us">Rate Us!</string>
    <string-array name="months">
        <item>Janvier</item>
        <item>Fevrier</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Aout</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Decembre</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>
