<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QtyFragment">

    <TextView
        android:id="@+id/qty_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="#DAD9D9"
        android:textSize="20sp"
        android:textColor="@color/text_dark_blue"
        android:layout_height="50dp"
        android:text="@string/enter_quantity" />
    <EditText
        android:id="@+id/qty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_qty"
        android:inputType="number"
        android:text="1" />

    <Button
        android:id="@+id/qty_butt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>