<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/royal_blue_bg"
    tools:context=".TicketAct">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:text="@string/ticket_title"
        android:textColor="@color/butt_text"
        android:textSize="25sp"
        android:fontFamily="@font/nunito_semibold_italic"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/ticketView"
        android:layout_width="369dp"
        android:layout_height="590dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_ticket"
        android:orientation="vertical"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/order_date"
                android:textColor="#F19347"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold_italic"
                />
            <TextView
                android:id="@+id/date2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:layout_weight="4"
                android:textColor="#141C50"
                android:text="@string/date_placeholder"
                android:textSize="22sp"
                android:fontFamily="@font/nunito_semibold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/order_n"
                android:textColor="#F19347"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold_italic"/>
            <TextView
                android:id="@+id/order_no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/order_no_placeholder"
                android:textColor="#141C50"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_semibold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/textView8_2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/transaction_code"
                android:textColor="#F19347"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold_italic"/>
            <TextView
                android:id="@+id/trans_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_weight="2"
                android:text="G69DVV3L2X42"
                android:textColor="#141C50"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_semibold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="#F19347"
                android:text="@string/total"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold_italic"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/total_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/price_dzd_placeholder"
                android:textColor="#141C50"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/euro_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/total_in_eur"
                android:textColor="#F19347"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold_italic"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/total_eur2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_eur_placeholder"
                android:textColor="#141C50"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_semibold"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/pay_method"
                android:textColor="#F19347"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_bold_italic"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/pay_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/paymethodplaceholder"
                android:textColor="#141C50"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_semibold"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/delivery_addr"
                android:textColor="#F19347"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold_italic"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/addr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/random_ny_addr"
                android:textColor="#141C50"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_semibold"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView12"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/estimated_wait_period"
                android:textColor="#F19347"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold_italic"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/_1_2_weeks"
                android:textColor="#141C50"
                android:textSize="24sp"
                android:fontFamily="@font/nunito_semibold"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ticket_butt_done"
            android:layout_width="66dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gradient_butt"
            android:elevation="10dp"
            android:src="@drawable/done_ic"
            android:textSize="24sp"
            android:textColor="@color/butt_text"/>
        <ImageView
            android:id="@+id/ticket_butt_save"
            android:layout_width="66dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gradient_butt"
            android:elevation="10dp"
            android:src="@drawable/save_ic"
            android:textSize="24sp"
            android:textColor="@color/butt_text"/>
    </LinearLayout>


</LinearLayout>