<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/royal_blue_bg"
    tools:context=".TotalAct">

    <TextView
        android:id="@+id/total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="83dp"
        android:text="@string/price_dzd_placeholder"
        android:textColor="@color/butt_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <LinearLayout
        android:id="@+id/paypal_lay"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="158dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_tv"
        android:gravity="center_vertical|center_horizontal">
        <ImageView
            android:id="@+id/paypal_logo"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="2"
            android:src="@drawable/paypal_webp"/>
        <Button
            android:id="@+id/paypal_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_butt"
            android:elevation="24dp"
            android:text="@string/paypal"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ccp_lay"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paypal_lay"
        android:gravity="center_vertical|center_horizontal" >
        <ImageView
            android:id="@+id/ccp_logo"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="2"
            android:src="@drawable/ccp_logo"/>
        <Button
            android:id="@+id/ccp_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_butt"
            android:elevation="24dp"
            android:text="CCP"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/cib_lay"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccp_lay"
        android:gravity="center_vertical|center_horizontal" >
        <ImageView
            android:id="@+id/cib_logo"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="2"
            android:src="@drawable/cib_logo_alt"/>
        <Button
            android:id="@+id/cib_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_butt"
            android:elevation="24dp"
            android:text="CiB"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textColor="@color/text_dark_blue"
        android:layout_marginTop="86dp"
        android:text="@string/your_total"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="83dp"
        android:text="@string/dzd"
        android:textSize="24sp"
        android:textColor="@color/butt_text"
        android:textStyle=""
        app:layout_constraintStart_toEndOf="@+id/total_tv"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/date"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/butt_text"
        android:text="@string/date_placeholder"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/order_date"
        android:textColor="@color/text_dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="31dp"
        android:text="@string/order_n"
        android:textColor="@color/text_dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="31dp"
        android:textStyle="bold"
        android:textColor="@color/butt_text"
        android:text="@string/order_no_placeholder"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/your_total_in_eur"
        android:textColor="@color/text_dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tip_eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/this_is_the_amount_in_eur"
        android:textSize="12sp"
        android:textColor="@color/butt_text"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/show_tip_1"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/total_eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:text="@string/total_eur_placeholder"
        android:textColor="@color/butt_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/total_tv" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:text="@string/eur_currency_sign"
        android:textColor="@color/butt_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/total_eur"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/show_tip_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@android:drawable/ic_menu_info_details" />
</androidx.constraintlayout.widget.ConstraintLayout>